package hogwartSim.general;

/**
 * Interface associated with movement
 */
public interface ICreature {
    public void move();
}
