package hogwartSim.general;

/**
 * Interface associated with basilisk killing students
 */
public interface IKill {
    public void kill(Student studentToKill);
}
