package hogwartSim.general;

public interface IUseItem {
}
