package hogwartSim.interactions;

import hogwartSim.general.ICreature;
import hogwartSim.map.IMap;

/**
 * Interface associated with interactions between objects
 */
public interface IInteractionAgent {


}
